// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper input matches snapshot (disabled) 1`] = `
.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #57666E;
}

.c0:focus {
  border-color: #0080A5;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 32px;
  width: 23px;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-left: none;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 var(--spacing-half);
  border-bottom: none;
  border-radius: 0 var(--border-radius) 0 0;
  height: calc(50% - 1px);
}

.c6:focus {
  outline: none;
}

.c6:hover {
  background-color: #D9DDE2;
}

.c6:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: default;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-left: none;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 var(--spacing-half);
  border-radius: 0 0 var(--border-radius) 0;
  height: calc(50% + 1px);
}

.c7:focus {
  outline: none;
}

.c7:hover {
  background-color: #D9DDE2;
}

.c7:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: default;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.c4 {
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  height: 32px;
  width: 56px;
  z-index: 1;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
}

.c4::-moz-placeholder {
  color: #57666E;
}

.c4:-ms-input-placeholder {
  color: #57666E;
}

.c4::placeholder {
  color: #57666E;
}

.c4:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c4:disabled,
.c4:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c4:disabled,
.c4:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c4:disabled,
.c4:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c4:disabled,
.c4:disabled::placeholder {
  color: #9CA7B4;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4[type=number] {
  -moz-appearance: textfield;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
  >
    test
  </label>
  <div
    class="c3"
  >
    <input
      class="c4"
      data-testid="stepper-input"
      disabled=""
      id="points"
      name="points"
      type="number"
    />
    <div
      class="c5"
    >
      <button
        class="c6"
        data-testid="stepper-button-increment"
        disabled=""
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
      <button
        class="c7"
        data-testid="stepper-button-decrement"
        disabled=""
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Stepper input matches snapshot (invalid) 1`] = `
.c3 {
  color: #A40C2E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c5 {
  margin-left: var(--spacing-base);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #A40C2E;
}

.c0:focus {
  border-color: #A40C2E;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-half);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 32px;
  width: 23px;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-left: none;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 var(--spacing-half);
  border-bottom: none;
  border-radius: 0 var(--border-radius) 0 0;
  height: calc(50% - 1px);
}

.c9:focus {
  outline: none;
}

.c9:hover {
  background-color: #D9DDE2;
}

.c9:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: default;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-left: none;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 var(--spacing-half);
  border-radius: 0 0 var(--border-radius) 0;
  height: calc(50% + 1px);
}

.c10:focus {
  outline: none;
}

.c10:hover {
  background-color: #D9DDE2;
}

.c10:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: default;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.c7 {
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  height: 32px;
  width: 56px;
  z-index: 1;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c7::-webkit-input-placeholder {
  color: #57666E;
}

.c7::-moz-placeholder {
  color: #57666E;
}

.c7:-ms-input-placeholder {
  color: #57666E;
}

.c7::placeholder {
  color: #57666E;
}

.c7:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c7:disabled,
.c7:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c7:disabled,
.c7:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c7:disabled,
.c7:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c7:disabled,
.c7:disabled::placeholder {
  color: #9CA7B4;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7[type=number] {
  -moz-appearance: textfield;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
  >
    test
  </label>
  <div
    aria-live="polite"
    class="c3"
    id="undefined_invalid"
    role="alert"
  >
    <div
      class="c4"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </div>
    <span
      class="c5"
    >
      Invalid number
    </span>
  </div>
  <div
    class="c6"
  >
    <input
      class="c7"
      data-testid="stepper-input"
      id="points"
      name="points"
      type="number"
    />
    <div
      class="c8"
    >
      <button
        class="c9"
        data-testid="stepper-button-increment"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
      <button
        class="c10"
        data-testid="stepper-button-decrement"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Stepper input matches snapshot (mobile) 1`] = `
.c2 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #57666E;
}

.c0:focus {
  border-color: #0080A5;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.c4 {
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 1rem;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-1x);
  width: 100%;
  border-radius: var(--border-radius);
  height: 40px;
  width: 164px;
  z-index: 1;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
}

.c4::-moz-placeholder {
  color: #57666E;
}

.c4:-ms-input-placeholder {
  color: #57666E;
}

.c4::placeholder {
  color: #57666E;
}

.c4:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c4:disabled,
.c4:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c4:disabled,
.c4:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c4:disabled,
.c4:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c4:disabled,
.c4:disabled::placeholder {
  color: #9CA7B4;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4[type=number] {
  -moz-appearance: textfield;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
  >
    test
  </label>
  <div
    class="c3"
  >
    <input
      class="c4"
      data-testid="stepper-input"
      id="points"
      name="points"
      type="number"
    />
  </div>
</div>
`;

exports[`Stepper input matches snapshot 1`] = `
.c2 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #57666E;
}

.c0:focus {
  border-color: #0080A5;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 32px;
  width: 23px;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-left: none;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 var(--spacing-half);
  border-bottom: none;
  border-radius: 0 var(--border-radius) 0 0;
  height: calc(50% - 1px);
}

.c6:focus {
  outline: none;
}

.c6:hover {
  background-color: #D9DDE2;
}

.c6:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: default;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-left: none;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 var(--spacing-half);
  border-radius: 0 0 var(--border-radius) 0;
  height: calc(50% + 1px);
}

.c7:focus {
  outline: none;
}

.c7:hover {
  background-color: #D9DDE2;
}

.c7:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: default;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.c4 {
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  height: 32px;
  width: 56px;
  z-index: 1;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c4::-webkit-input-placeholder {
  color: #57666E;
}

.c4::-moz-placeholder {
  color: #57666E;
}

.c4:-ms-input-placeholder {
  color: #57666E;
}

.c4::placeholder {
  color: #57666E;
}

.c4:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c4:disabled,
.c4:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c4:disabled,
.c4:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c4:disabled,
.c4:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c4:disabled,
.c4:disabled::placeholder {
  color: #9CA7B4;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4[type=number] {
  -moz-appearance: textfield;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
  >
    test
  </label>
  <div
    class="c3"
  >
    <input
      class="c4"
      data-testid="stepper-input"
      id="points"
      name="points"
      type="number"
    />
    <div
      class="c5"
    >
      <button
        class="c6"
        data-testid="stepper-button-increment"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
      <button
        class="c7"
        data-testid="stepper-button-decrement"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
  </div>
</div>
`;
